Fixed styling for the widgets when there's too much free space.

--- a/src/admin_customizer/static/admin_customizer/widgets/field-select.css
+++ b/src/admin_customizer/static/admin_customizer/widgets/field-select.css
@@ -14,7 +14,8 @@
     margin-right: 10px;
 }
 .field-selector-choosen select {
-    width: 250px;
+    width: 100%;
+    min-width: 250px;
 }
 
 .field-selector-available select, .field-selector-choosen select {
